--- a/package.json
+++ b/package.json
@@ -40,7 +40,15 @@
     "url": "https://github.com/strong-roots-capital/next-session-open/issues"
   },
   "homepage": "https://github.com/strong-roots-capital/next-session-open",
-  "dependencies": {},
+  "dependencies": {
+    "@strong-roots-capital/add-timeframe": "^1.0.0",
+    "@strong-roots-capital/get-recent-sessions": "^1.0.4",
+    "debug": "^4.1.1",
+    "market-session": "^2.0.4",
+    "moment": "^2.24.0",
+    "ow": "^0.12.0",
+    "supports-color": "^6.1.0"
+  },
   "devDependencies": {
     "@types/node": "^10.14.4",
     "ava": "^1.4.1",
