--- a/package.json
+++ b/package.json
@@ -13,17 +13,11 @@
     "watch:ava": "nodemon -e 'ts json' -x 'npm run ava || true'",
     "watch:ava:fail-fast": "nodemon -e 'ts json' -x 'npm run ava:fail-fast || true'",
     "test": "nyc ava",
-    "test:tap": "nyc ava --tap | tap-nyc",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "watch:test": "nodemon -e 'ts json' -x 'npm test || true'",
     "typedoc": "typedoc",
     "push-with-tags": "git push origin master && git push origin --tags",
     "push-and-publish": "npm run push-with-tags && npm publish"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run typedoc && git add doc && (git commit -m 'Update documentation' || true)"
-    }
   },
   "repository": {
     "type": "git",
@@ -43,19 +37,16 @@
   "dependencies": {
     "@strong-roots-capital/add-timeframe": "^1.0.0",
     "@strong-roots-capital/get-recent-sessions": "^1.0.4",
-    "debug": "^4.1.1",
-    "market-session": "^2.0.4",
-    "moment": "^2.24.0",
-    "ow": "^0.12.0",
-    "supports-color": "^6.1.0"
+    "@strong-roots-capital/is-tradingview-format": "^1.2.3",
+    "od": "^1.0.0",
+    "ow": "^0.12.0"
   },
   "devDependencies": {
     "@types/node": "^10.14.4",
     "ava": "^1.4.1",
     "codecov": "^3.1.0",
-    "husky": "^1.3.1",
+    "moment": "^2.24.0",
     "nyc": "^13.1.0",
-    "tap-nyc": "^1.0.3",
     "ts-node": "^7.0.1",
     "typedoc": "^0.13.0",
     "typedoc-plugin-markdown": "^1.1.27",
